--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1643,107 +1643,107 @@ stories:
   domain: http://www.journalrecord.com/
   link: https://journalrecord.com/2019/12/31/hunting-fishing-compact-with-cherokee-nation-extended/
 images:
-- name: bf-skinner-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-lincoln-sitting-front.jpg
-- name: walled-garden-walled-garden-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-marcel-duchamp.jpg
-- name: adam-smith-adam-smith-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit-2.jpg
-- name: christianity-christianity-under-construction-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dali-three.jpg
-- name: beach-clouds-lifeguard-beachclouds-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-creativity.jpg
-- name: copper-circuit-statue-staring-down-to-right.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-staring-down-to-right.jpg
-- name: nazi-invasion-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cemetery_36690406946_o.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-blocks.jpg
-- name: old-granary-field-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alberto-giacometti.jpg
-- name: status-berlin-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
-- name: la-muse-downtown-berlin-crowds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-berlin-crowds.jpg
-- name: meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-far-away.jpg
-- name: wreck-IMG_7054.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_7054.jpg
-- name: nazi-invasion-IMG_7916.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7916.jpg
-- name: old-house-oldhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-monet-one.jpg
-- name: fence-mexico-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-circuit.jpg
-- name: mosaic-face-mosaic-face-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-alberto-giacometti.jpg
-- name: oldhouse-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-diego-rivera1.jpg
-- name: miamibeach-miamibeach-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-umberto-bocc.jpg
-- name: yosemite-yosemite-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-atari-asteroids.jpg
-- name: containership-containership-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-asteroids.jpg
-- name: oldtrain-oldtrain-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-cinnamon-rolls.jpg
-- name: berlinwall-DSC-0084-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crunch-paper.jpg
-- name: nyc-flag-nycflag-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gan-vogh.jpg
-- name: gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
-- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
-- name: IMG_4038.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/IMG_4038.jpg
-- name: docks-docks-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-creativity.jpg
-- name: old-barn-old-barn-1500-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-paper.jpg
-- name: trucksilo-trucksilo-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-green-zuma.jpg
-- name: old-door-lock-old-door-lock-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sand-paper.jpg
-- name: bluelake-clean-view-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
-- name: store-on-corner-oldcabin-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-oily-mcoilface.jpg
-- name: blossombar-crafty-painting-file-00-00-50-22.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-22.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-- name: yosemite-yosemite-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-kand-two.jpg
+- name: christianity-christianity-under-construction-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-deep-connections.jpg
+- name: stories-new-43-150-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-43-150-800-500-0-max-0--5--5.jpg
+- name: la-muse-lincoln-sitting-front.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lincoln-sitting-front.jpg
+- name: copper-circuit-pigeon_35927783393_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-pigeon_35927783393_o.jpg
+- name: eduardo-eduardo-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purp-paper.jpg
+- name: la-muse-old-broken-piano-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-old-broken-piano-street.jpg
+- name: oldtrain-oldtrain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-crabapple.jpg
+- name: cargo-ship-cargo-ship-on-sea-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dry-skin.jpg
+- name: bordercrossing-bordercrossing-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-far-away.jpg
+- name: rockingchair-rockingchair-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gred-mash.jpg
+- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+- name: christianity-christianity-under-construction-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-umberto-bocc.jpg
+- name: ellis-island-ellis-island-room-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smooth-ride.jpg
+- name: oldcabin-store-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-post-modern.jpg
+- name: old-house-oldhouse-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-plentiful.jpg
+- name: nazi-invasion-white-house-close-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-close-up.jpg
+- name: stories-new-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-art-museum-light-dali.jpg
+- name: oldbarn-oldbarn-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dark-rain.jpg
+- name: old-school-house-old-schoolhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-two.jpg
+- name: oldhouse-granaryfield-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-matrix.jpg
+- name: ellis-island-ellisisland-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-smoking-cigarette.jpg
+- name: walled-garden-walled-garden-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-post-modern.jpg
+- name: containership-containership-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-granite.jpg
+- name: server-cloud-server-racks-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-oily-mcoilface.jpg
+- name: old-house-oldhouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-constitution.jpg
+- name: yosemite-yosemite-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-far-away.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alberto-giacometti.jpg
+- name: christianity-christianity-under-construction-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-granite.jpg
+- name: supreme-court-supremecourt-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-rainbow-festival.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+- name: death-valley-death-valley-national-park-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-ww2-dresden.jpg
+- name: ellis-island-ellis-island-room-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-deep-connections.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crafty-painting.jpg
+- name: la-muse-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-electric-tower-sun-behind.jpg
+- name: razorwire-DSC-0080-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-two.jpg
+- name: ellis-island-ellis-island-room-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-circuit.jpg
+- name: crow_spagetti_accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_spagetti_accident.jpg
+- name: oldhousecars-house-old-cars-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-green-zuma.jpg
 - name: stories-G0520270-blue-circuit.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-G0520270-blue-circuit.jpg
-- name: braceros-domingo-ulloa-oxford-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-oxford-old-building.jpg
-- name: old-granary-field-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-blocks.jpg
-- name: aws-s3-tunnel-tunnel-purp-paper-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still.jpg
-- name: fence-mexico-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-aqua.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
-- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
-- name: supreme-court-supremecourt-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smoking-cigarette.jpg
-- name: school-clouds-church-clouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gan-vogh.jpg
-- name: razorcliff-razorcliff-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-cinnamon-rolls.jpg
-- name: aws-s3-stories-new-80-140-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-140-800-500-0-max-0--5--5.jpg
-- name: border-crossing-bordercrossing-diego-rivera1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-diego-rivera1.png
-- name: containership-containership-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-color.jpg
-- name: paris-paris-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gred-mash.jpg
+- name: downtown-los-angeles-downtown-la.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la.JPG
+- name: dc-statue-dcstatue-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-mucha-mult.jpg
+- name: oldhotel-oldhotel-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-dream.jpg
+- name: nazi-invasion-british-guards-marching.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-british-guards-marching.jpg
+- name: art-museum-art-museum-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-deep-connections.jpg
+- name: trucksilo-trucksilo-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-clean-view.jpg
+- name: capital-battle-capitolbattle-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-creativity.jpg
+- name: school-clouds-church-clouds-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-atari-missle.jpg
+- name: stories-internet-gauages-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-internet-gauages-3.jpg
+- name: downtown-los-angeles-downtown-la-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-pablo-blue.JPG
+- name: school-clouds-church-clouds-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-electricity.jpg
 ---
 Frank Burns Sees Volunteering As Being A Faithful Servant.&nbsp;Moffat County Robotics Program Hosting Fundraiser Breakfast.&nbsp;Steel Magnolias Christmas Joy Concert Hits Prairie Lea.&nbsp;Slow Day Turns Into Large Surprise For Fishermen.&nbsp;Three Great Fall Walks On Cape Cod.&nbsp;Which Lego Table Is Best For You.&nbsp;Winning Numbers Drawn In 'Daily Pick 3' Game.&nbsp;Back From Break, Concordia Women's Basketball Is Ready For More Challenges.&nbsp;
